Fixed syntax mistakes in PhpStorm

--- a/wp-content/plugins/unite-gallery-lite/unitegallery-plugin/css/unite-gallery.css
+++ b/wp-content/plugins/unite-gallery-lite/unitegallery-plugin/css/unite-gallery.css
@@ -1,4 +1,4 @@
-.---------Protection--------{}
+/*.---------Protection--------{}*/
 
 .ug-gallery-wrapper, 
 .ug-gallery-wrapper *{
@@ -10,7 +10,7 @@
 	max-width:none;
 }
 
-.---------General_Styles--------{}
+/*.---------General_Styles--------{}*/
 
 .ug-rtl{
 	direction:rtl;
@@ -90,7 +90,7 @@
 }
 
 
-.--------------SLIDER------------------{}
+/*.--------------SLIDER------------------{}*/
 
 .ug-gallery-wrapper .ug-slider-wrapper{
 	position:absolute;
@@ -265,7 +265,7 @@
 }
 
 
-.--------------VIDEO_PLAYER------------------{}
+/*.--------------VIDEO_PLAYER------------------{}*/
 
 .ug-gallery-wrapper .ug-videoplayer{
 	position:absolute;
@@ -302,7 +302,7 @@
 	background-position: 0px -64px;
 }
 
-.--------------THUMBS_STRIP------------------{}
+/*.--------------THUMBS_STRIP------------------{}*/
 
 
 .ug-gallery-wrapper .ug-thumbs-strip,
@@ -426,7 +426,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------BULLETS------------------{}
+/*.--------------BULLETS------------------{}*/
 
 
 .ug-gallery-wrapper .ug-bullets{
@@ -450,7 +450,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------TEXT_PANEL------------------{}
+/*.--------------TEXT_PANEL------------------{}*/
 
 .ug-gallery-wrapper .ug-textpanel{
 	position:absolute;
@@ -498,7 +498,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------ZOOM_PANEL------------------{}
+/*.--------------ZOOM_PANEL------------------{}*/
 
 .ug-slider-wrapper .ug-zoompanel{
 	position:absolute;
@@ -513,7 +513,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------ZOOM_PANEL_BUTTONS------------------{}
+/*.--------------ZOOM_PANEL_BUTTONS------------------{}*/
 
 .ug-gallery-wrapper .ug-arrow-left{
 	position:absolute;	
@@ -529,7 +529,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------GRID_PANEL_AND_ARROWS------------------{}
+/*.--------------GRID_PANEL_AND_ARROWS------------------{}*/
 
 
 .ug-gallery-wrapper .ug-grid-panel{
@@ -572,7 +572,7 @@ img.ug-sepia-effect{
 }
 
 
-.--------------STRIP_PANEL------------------{}
+/*.--------------STRIP_PANEL------------------{}*/
 
 .ug-gallery-wrapper .ug-strip-panel{
 	position:absolute;
@@ -594,7 +594,7 @@ img.ug-sepia-effect{
 	position:absolute;
 }
 
-.--------------TILES------------------{}
+/*.--------------TILES------------------{}*/
 
 .ug-thumb-wrapper.ug-tile{
 	display:block;
@@ -711,7 +711,7 @@ img.ug-sepia-effect{
 	font-weight:bold;
 }
 
-.--------------CAROUSEL------------------{}
+/*.--------------CAROUSEL------------------{}*/
 
 .ug-gallery-wrapper .ug-carousel-wrapper{
 	position:absolute;
@@ -723,7 +723,7 @@ img.ug-sepia-effect{
 }
 
 
-.------------------LIGHTBOX---------------------{}
+/*.------------------LIGHTBOX---------------------{}*/
 
 .ug-gallery-wrapper.ug-lightbox{
 	display: none;
@@ -852,7 +852,7 @@ img.ug-sepia-effect{
 	font-size: 16px;
 }
 
-.------------------CATEGORY_TABS---------------------{}
+/*.------------------CATEGORY_TABS---------------------{}*/
 
 	.ug-tabs-wrapper{
 		margin-top:0px;
@@ -893,7 +893,7 @@ img.ug-sepia-effect{
 	}
 
 
-.------------------DEFAULT_SKIN---------------------{}
+/*.------------------DEFAULT_SKIN---------------------{}*/
 
 /* --- arrows -- */
 
