--- a/wp-content/themes/frg_red/style.css
+++ b/wp-content/themes/frg_red/style.css
@@ -424,6 +424,66 @@ article{
 	display: none
 }
 
+.contact-form p{
+	margin: 15px 20px;
+	float: left;
+}
+
+.contact-form input{
+	width: 200px;
+	height: 32px;
+	border: solid 1px #FFF;
+}
+
+.contact-form .captcha {
+	position: relative;
+	float: none;
+	clear: both;
+}
+
+.contact-form .captcha img{
+	width: 70px;
+	height: 32px;
+	margin: 0 15px;
+}
+
+.contact-form .captcha span input{
+	position: absolute;
+	bottom: -10px;
+	width: 100px;
+}
+
+.contact-form .captcha-before{
+	position: absolute;
+	bottom: 0;
+	display: block;
+	width: 20px;
+	height: 32px;
+	background-color: #FFF;
+}
+.contact-form .captcha-arrow{
+	position: absolute;
+	display: block;
+	bottom: 0;
+	left: 80px;
+	width: 20px;
+	height: 32px;
+	margin: 0;
+	background-image: url("images/captcha-arrow.png");
+	background-repeat: no-repeat;
+	background-position: 7px 50%;
+	background-color: #FFF;
+
+}
+
+.contact-form input,
+.contact-form textarea{
+	background-color: #E7584D;
+}
+.contact-form .submit-button input{
+	background-color: #000;
+}
+
 
 /*End page header styles*/
 
